# py-sse-mcp

./: .gitignore  README.md  guide.md  mermaid.js  pyproject.toml  requirements.txt  server.py  tools.py  tox.ini
.github/workflows/: python-ci.yml
example/: config.py  run_server.py
example/web-based/: fast_api_server.py  run_mcp_with_api_call.py  run_mcp_with_flask_call.py
pymcp/: applications.py  middleware.py  registry.py  server.py  utils.py
tests/: test_middleware.py  test_server.py
